[package]
name = "project_tree"
version = "0.1.30"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
regex = "1.5"
minidom = "*"
log = "0.4"
simplelog = { version = "^0.11.0", features = ["paris"] }


# time = "*"
